# flightsim

./: .gitignore  Cargo.toml  README.md
assets/planes/ask21/: ASK21_Fuselage_Collider.csv  ASK21_Horizontal_Stabilizer_Collider.csv  ASK21_Left_Wing_Collider.csv  ASK21_Right_Wing_Collider.csv  ASK21_Vertical_Stabilizer_Collider.csv  ask21.glb
src/: aerodynamics.rs  airplane.rs  camera.rs  hud.rs  input.rs  main.rs
